--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Tactoe/spluxio#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-uuid": "^1.4.8",
+    "socket.io": "^2.3.0"
   }
 }
